--- a/demo/src/html/index.html.template
+++ b/demo/src/html/index.html.template
@@ -1,108 +1,105 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>eDashboard Demo</title>
-    <%= renderTemplate("../../../src/html/_header.html.template") %>
+
+<head>
+  <title>eDashboard Demo</title>
+  <%= renderTemplate("../../../src/html/_header.html.template") %>
     <link rel="mask-icon" href="/static/icons/mask-icon.svg" color="#03a9f4" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/static/icons/favicon-apple-180x180.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/favicon-apple-180x180.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="msapplication-square70x70logo"
-      content="/static/icons/tile-win-70x70.png"
-    />
-    <meta
-      name="msapplication-square150x150logo"
-      content="/static/icons/tile-win-150x150.png"
-    />
-    <meta
-      name="msapplication-wide310x150logo"
-      content="/static/icons/tile-win-310x150.png"
-    />
-    <meta
-      name="msapplication-square310x310logo"
-      content="/static/icons/tile-win-310x310.png"
-    />
+    <meta name="msapplication-square70x70logo" content="/static/icons/tile-win-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="/static/icons/tile-win-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="/static/icons/tile-win-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="/static/icons/tile-win-310x310.png" />
     <meta name="msapplication-TileColor" content="#03a9f4ff" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="referrer" content="same-origin" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#03a9f4" />
     <%= renderTemplate("_social_meta.html.template") %>
-    <style>
-      html {
-        background-color: var(--primary-background-color, #fafafa);
-        color: var(--primary-text-color, #212121);
-      }
-      @media (prefers-color-scheme: dark) {
+      <style>
         html {
-          background-color: var(--primary-background-color, #111111);
-          color: var(--primary-text-color, #e1e1e1);
+          background-color: var(--primary-background-color, #fafafa);
+          color: var(--primary-text-color, #212121);
         }
-      }
-      body {
-        font-family: Roboto, Noto, sans-serif;
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        font-weight: 400;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-      }
-      #ha-launch-screen {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-      #ha-launch-screen svg {
-        width: 170px;
-        flex-shrink: 0;
-      }
-      #ha-launch-screen .ha-launch-screen-spacer {
-        flex: 1;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="ha-launch-screen">
-      <div class="ha-launch-screen-spacer"></div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240">
-        <path fill="#18BCF2" d="M240 224.762a15 15 0 0 1-15 15H15a15 15 0 0 1-15-15v-90c0-8.25 4.77-19.769 10.61-25.609l98.78-98.7805c5.83-5.83 15.38-5.83 21.21 0l98.79 98.7895c5.83 5.83 10.61 17.36 10.61 25.61v90-.01Z"/>
-        <path fill="#F2F4F9" d="m107.27 239.762-40.63-40.63c-2.09.72-4.32 1.13-6.64 1.13-11.3 0-20.5-9.2-20.5-20.5s9.2-20.5 20.5-20.5 20.5 9.2 20.5 20.5c0 2.33-.41 4.56-1.13 6.65l31.63 31.63v-115.88c-6.8-3.3395-11.5-10.3195-11.5-18.3895 0-11.3 9.2-20.5 20.5-20.5s20.5 9.2 20.5 20.5c0 8.07-4.7 15.05-11.5 18.3895v81.27l31.46-31.46c-.62-1.96-.96-4.04-.96-6.2 0-11.3 9.2-20.5 20.5-20.5s20.5 9.2 20.5 20.5-9.2 20.5-20.5 20.5c-2.5 0-4.88-.47-7.09-1.29L129 208.892v30.88z"/>
-      </svg>
-      <div id="ha-launch-screen-info-box" class="ha-launch-screen-spacer"></div>
-    </div>
-    <ha-demo></ha-demo>
-    <%= renderTemplate("../../../src/html/_js_base.html.template") %>
+
+        @media (prefers-color-scheme: dark) {
+          html {
+            background-color: var(--primary-background-color, #111111);
+            color: var(--primary-text-color, #e1e1e1);
+          }
+        }
+
+        body {
+          font-family: Roboto, Noto, sans-serif;
+          -moz-osx-font-smoothing: grayscale;
+          -webkit-font-smoothing: antialiased;
+          font-weight: 400;
+          height: 100vh;
+          margin: 0;
+          padding: 0;
+        }
+
+        #ha-launch-screen {
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+
+        #ha-launch-screen svg {
+          width: 170px;
+          flex-shrink: 0;
+        }
+
+        #ha-launch-screen .ha-launch-screen-spacer {
+          flex: 1;
+        }
+      </style>
+</head>
+
+<body>
+  <div id="ha-launch-screen">
+    <div class="ha-launch-screen-spacer"></div>
+    <svg width="640" height="640" viewBox="0 0 640 640" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g clip-path="url(#clip0_419_15)">
+        <path
+          d="M227.383 465.17C162.569 465.17 109.817 411.949 109.817 346.489C109.817 314.74 121.97 284.926 144.184 262.539C166.503 240.127 195.982 227.782 227.383 227.782C258.901 227.782 288.381 240.127 310.673 262.539C333.005 285.004 345.145 314.753 345.145 346.489C345.145 411.949 292.392 465.17 227.383 465.17ZM481.985 117C513.085 166.219 531.196 224.644 531.196 287.136C531.092 385.705 472.407 470.596 388.541 508.361C429.52 466.844 454.988 409.635 454.988 346.489C454.988 285.122 431.31 227.547 388.358 184.212C345.328 140.917 288.185 117 227.383 117C166.594 117 109.53 140.956 66.6559 184.212C23.6648 227.586 0 285.122 0 346.424V346.489V346.79C0 425.078 30.2637 498.658 85.1199 553.997C140.094 609.428 213.127 639.935 290.759 640C483.788 640.052 640.922 481.855 641 287.214C641 226.776 628.469 169.227 605.954 117H481.985Z"
+          fill="black" />
+      </g>
+      <defs>
+        <clipPath id="clip0_419_15">
+          <rect width="640" height="640" fill="white" />
+        </clipPath>
+      </defs>
+    </svg>
+    <div id="ha-launch-screen-info-box" class="ha-launch-screen-spacer"></div>
+  </div>
+  <ha-demo></ha-demo>
+  <%= renderTemplate("../../../src/html/_js_base.html.template") %>
     <%= renderTemplate("../../../src/html/_preload_roboto.html.template") %>
-    <script>
-      // Safari 12 and below does not have a compliant ES2015 implementation of template literals, so we ship ES5
-      if (!isS11_12) {
+      <script>
+        // Safari 12 and below does not have a compliant ES2015 implementation of template literals, so we ship ES5
+        if (!isS11_12) {
         <% for (const entry of latestEntryJS) { %>
-          import("<%= entry %>");
+            import("<%= entry %>");
         <% } %>
-        window.latestJS = true;
-      }
-    </script>
-    <%= renderTemplate("../../../src/html/_script_load_es5.html.template") %>
-    <script>
-      var _gaq = [["_setAccount", "UA-57927901-5"], ["_trackPageview"]];
-      (function (d, t) {
-        var g = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-        g.src =
-          ("https:" == location.protocol ? "//ssl" : "//www") +
-          ".google-analytics.com/ga.js";
-        s.parentNode.insertBefore(g, s);
-      })(document, "script");
-    </script>
-  </body>
+            window.latestJS = true;
+        }
+      </script>
+      <%= renderTemplate("../../../src/html/_script_load_es5.html.template") %>
+        <script>
+          var _gaq = [["_setAccount", "UA-57927901-5"], ["_trackPageview"]];
+          (function (d, t) {
+            var g = d.createElement(t),
+              s = d.getElementsByTagName(t)[0];
+            g.src =
+              ("https:" == location.protocol ? "//ssl" : "//www") +
+              ".google-analytics.com/ga.js";
+            s.parentNode.insertBefore(g, s);
+          })(document, "script");
+        </script>
+</body>
+
 </html>
